# Rust_ML

./: README.md
HandwrittenClassifier/: Cargo.toml  download.py
HandwrittenClassifier/src/: data.rs  main.rs  model.rs  train.rs  utils.rs
